[tool.poetry]
name = "srx-get-security-zones"
version = "0.1.0"
description = "Use scraply to retrieve security zone information from a Juniper SRX firewall"
authors = ["devnet9 <chistyakov@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.6"
scrapli-netconf = "^2022.1.30"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
